# SolBridge

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app-idls/: README.md
components/admin/: AdminActivityTimeline.tsx  (+9 more)
docs/: backend-api.md  component-architecture.md  wallet-api.md
hooks/: use-active-wallet.ts  use-auth.ts  use-wallet-data.ts  useAssistantInsights.ts  useContractConsole.ts  useFollowWallet.ts  useGovernance.ts  useLeaderboards.ts  useLending.ts  useLiquidity.ts  useNetworkMonitor.ts  useRiskEngine.ts  useSocialProfile.ts  useStaking.ts  useStrategyBuilder.ts  useTaxReports.ts  useTreasury.ts  useTrendingWallets.ts  useWalletState.ts
lib/: constants.ts  retix-wallet.ts  solana.ts
migrations/: deploy.ts
programs/lending_program/: Cargo.toml
programs/lending_program/src/: lib.rs
scripts/: copy-idls.mjs
server/: .env.example  package-lock.json  package.json
services/: api.ts  assistantService.ts  contractConsoleService.ts  governanceProgramService.ts  lendingProgramService.ts  liquidityProgramService.ts  networkMonitorService.ts  solanaService.ts  splTokenService.ts  stakingProgramService.ts  strategyService.ts
store/: address-book-store.ts  auth-store.ts  market-store.ts  trading-store.ts  ui-store.ts  wallet-store.ts
tests/: governance-program.ts  lending-program.ts  liquidity-program.ts  staking-program.ts
types/: index.ts
utils/: format.ts
(+606 files in other folders)
