[package]
name = "lending_program"
version = "0.1.0"
description = "SolanaBlocks lending program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
